# ws_xarm

./: .gitignore  README.md  requirements.txt
src/pc_tools/: CMakeLists.txt  package.xml
src/pc_tools/src/: pc_repub_sanitized.cpp
src/xarm_bt/: package.xml  setup.cfg  setup.py
src/xarm_bt/launch/: grasping_tree.launch.py  grasping_tree_runner.launch.py  set_pose_example.launch.py
src/xarm_bt/resource/: xarm_bt
src/xarm_bt/xarm_bt/: __init__.py  arm_commander.py  grasping_tree_node.py  set_pose_example_node.py
src/xarm_bt/xarm_bt/behaviors/: __init__.py  offset_pose.py  say_text.py  select_detection_pose.py  select_yolo_target.py  set_joint_values.py  set_pose.py  transform_pose.py  yolo_detect.py
src/xarm_bt/xarm_bt/trees/: __init__.py  grasping_tree.py  set_pose_example.py
src/xarm_pose_action/: CMakeLists.txt  package.xml  pc_repub_time.py
src/xarm_pose_action/action/: SetJoints.action  SetPose.action
src/xarm_pose_action/launch/: set_joints_action_server.launch.py  set_pose_action_server.launch.py
src/xarm_pose_action/src/: set_joints_action_server.cpp  set_pose_action_server.cpp
