<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_pose_action</name>
  <version>0.0.0</version>
  <description>ROS 2 action server for moving an xArm through MoveIt 2 pose targets.</description>
  <maintainer email="ofc1227@tec.mx">oscar</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>action_msgs</depend>
  <depend>xarm_description</depend>
  <depend>xarm_moveit_config</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>uf_ros_lib</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
